# DataBase

./: .gitignore  Automotive Open System Architecture.docx  Balija_Pavankumar_CV.docx  Cryptography in AUTOSAR.docx  Diagnostic_Stack.docx  Hello.cpp  Protocols.docx  README.md  c imp q&a.txt
Adaptive_Autosar/Codes/Crypto_AP/crypto ara-api/source/: CMakeLists.txt  LICENSE
Adaptive_Autosar/Codes/Crypto_AP/crypto ara-api/source/ara-crypto/app/: CMakeLists.txt
Adaptive_Autosar/Codes/Crypto_AP/crypto ara-api/source/ara-crypto/core/: CMakeLists.txt
Adaptive_Autosar/Codes/Crypto_AP/crypto ara-api/source/certificate-provider/: CMakeLists.txt
Adaptive_Autosar/Codes/Crypto_AP/crypto ara-api/source/certificate-provider/src/: CMakeLists.txt  cert_sign_request_impl.cpp  certificate_impl.cpp  certmanger.cpp  ocsp_request_impl.cpp  ocsp_response_impl.cpp  x509_dn_impl.cpp  x509_provider_impl.cpp  x509_public_key_info_impl.cpp
Adaptive_Autosar/Codes/Crypto_AP/crypto ara-api/source/common/src/: algorithm_identification.cpp
Adaptive_Autosar/Codes/Crypto_AP/crypto ara-api/source/config/: CMakeLists.txt
Adaptive_Autosar/Codes/Crypto_AP/crypto ara-api/source/config/src/: CMakeLists.txt  crypto_config.cpp
Adaptive_Autosar/Codes/Crypto_AP/crypto ara-api/source/crypto-daemon/: CMakeLists.txt
Adaptive_Autosar/Codes/Crypto_AP/crypto ara-api/source/crypto-daemon/src/: CMakeLists.txt  crypto_daemon.cpp  main.cpp
Adaptive_Autosar/Codes/Crypto_AP/crypto ara-api/source/crypto-provider/: CMakeLists.txt
Adaptive_Autosar/Codes/Crypto_AP/crypto ara-api/source/key-storage/: CMakeLists.txt
Adaptive_Autosar/Codes/Crypto_AP/crypto ara-api/source/key-storage/src/: CMakeLists.txt  key_storage_provider_impl.cpp  keyslot_impl.cpp  keystorage.cpp
Adaptive_Autosar/Codes/Crypto_AP/crypto ara-api/source/utils/: CMakeLists.txt
Adaptive_Autosar/Codes/Crypto_AP/crypto ara-api/source/utils/src/: CMakeLists.txt  io_interface_sqlite.cpp  io_interface_volatile.cpp  utils.cpp  volatile_trusted_container_impl.cpp
Adaptive_Autosar/Codes/TCP/: CMakeLists.txt  a.out
Adaptive_Autosar/Codes/TCP/TCP_IP/TCPIP_colour_image/: CMakeLists.txt  client.cpp  server.cpp
Adaptive_Autosar/Codes/TCP/TCP_IP/TCPIP_vector/: client  client.cpp  server  server.cpp
Adaptive_Autosar/Codes/TCP/TCP_IP/TCPip_normal/: client  client.cpp  server  server.cpp
Adaptive_Autosar/Codes/UDP/: CMakeLists.txt  a.out  client.cpp  server.cpp
Adaptive_Autosar/Codes/core-dev-safety/source/: CMakeLists.txt  LICENSE
Adaptive_Autosar/Codes/core-dev-safety/source/core/: CMakeLists.txt  INSTALL.md  README.md
Adaptive_Autosar/Codes/core-dev-safety/source/core-types/: CMakeLists.txt  README.md
Adaptive_Autosar/Codes/core-dev-safety/source/core-types/files/cmake/: ara-core-types-config.cmake.in
Adaptive_Autosar/Codes/core-dev-safety/source/core-types/files/pkgconfig/: ara-core-types.pc.in
Adaptive_Autosar/Codes/core-dev-safety/source/core-types/src/: monotonic_buffer_resource.cpp  polymorphic_allocator.cpp  pool_resource.cpp  slist.cpp  unsynchronized_pool_resource.cpp
Adaptive_Autosar/Codes/core-dev-safety/source/core-types/test/: CMakeLists.txt  gmock_matchers.h  result_demo.cpp  test_array.cpp  test_basicstring.cpp  test_byte.cpp  test_convert.cpp  test_core_error_domain.cpp  test_domain.h  test_error_code.cpp  test_fixed_string.cpp  test_fixed_vector.cpp  test_future.cpp  test_future_error_domain.cpp  test_instance_specifier.cpp  test_map.cpp  test_optional_core.cpp  test_pmr.cpp  test_promise.cpp  test_result.cpp  test_span.cpp  test_steady_clock.cpp  test_string.cpp  test_string_view.cpp  test_variant.cpp  test_vector.cpp
Adaptive_Autosar/Codes/core-dev-safety/source/core/files/cmake/: ara-core-config.cmake.in
Adaptive_Autosar/Codes/core-dev-safety/source/core/files/pkgconfig/: ara-core.pc.in
Adaptive_Autosar/Codes/core-dev-safety/source/core/src/: CMakeLists.txt  abort.cpp  initialize.cpp
Adaptive_Autosar/Codes/core-dev-safety/source/core/src/test/: CMakeLists.txt  test_abort.cpp  test_initialize.cpp
Adaptive_Autosar/Codes/core-dev-safety/source/iceoryx_hoofs/: CMakeLists.txt
Adaptive_Autosar/Codes/core-dev-safety/source/iceoryx_hoofs/cmake/: IceoryxPackageHelper.cmake
Adaptive_Autosar/Codes/core-dev-safety/source/iceoryx_hoofs/platform/: CMakeLists.txt
Adaptive_Autosar/Codes/core-dev-safety/source/iceoryx_hoofs/source/concurrent/: active_object.cpp  loffli.cpp
Adaptive_Autosar/Codes/core-dev-safety/source/iceoryx_hoofs/source/cxx/: adaptive_wait.cpp  deadline_timer.cpp  filesystem.cpp  generic_raii.cpp  helplets.cpp  requires.cpp  unique_id.cpp
Adaptive_Autosar/Codes/core-dev-safety/source/iceoryx_hoofs/source/error_handling/: error_handler.cpp  error_handling.cpp
Adaptive_Autosar/Codes/core-dev-safety/source/iceoryx_hoofs/source/file_reader/: file_reader.cpp
Adaptive_Autosar/Codes/core-dev-safety/source/iceoryx_hoofs/source/log/: logcommon.cpp  logger.cpp  logging.cpp  logmanager.cpp  logstream.cpp
Adaptive_Autosar/Codes/core-dev-safety/source/iceoryx_hoofs/source/posix_wrapper/: access_control.cpp  file_lock.cpp  message_queue.cpp  mutex.cpp  named_pipe.cpp  posix_access_rights.cpp  semaphore.cpp  semaphore_interface.cpp  shared_memory_object.cpp  signal_handler.cpp  signal_watcher.cpp  system_configuration.cpp  thread.cpp  timer.cpp  unix_domain_socket.cpp  unnamed_semaphore.cpp
Adaptive_Autosar/Codes/core-dev-safety/source/iceoryx_posh/: CMakeLists.txt
Adaptive_Autosar/Codes/core-dev-safety/source/iceoryx_posh/cmake/: iceoryx_versions.hpp.in
Adaptive_Autosar/Codes/core-dev-safety/source/utils/cond-var/: CMakeLists.txt
Adaptive_Autosar/Codes/core-dev-safety/source/utils/config-reader/: CMakeLists.txt  LICENSE
Adaptive_Autosar/Codes/core-dev-safety/source/utils/ipc/: CMakeLists.txt
Adaptive_Autosar/Codes/core-dev-safety/source/utils/thread/: CMakeLists.txt  LICENSE
Adaptive_Autosar/Codes/core-dev-safety/source/utils/timer/: CMakeLists.txt  LICENSE
Adaptive_Autosar/Codes/vsomeip/vsomeip_method/: CMakeLists.txt  client-example.cpp  service-example.cpp
(+1559 files in other folders)
